--- a/src/components/sbb-autocomplete-item/styles/sbb-autocomplete-item.component.scss
+++ b/src/components/sbb-autocomplete-item/styles/sbb-autocomplete-item.component.scss
@@ -10,15 +10,15 @@
 .autocomplete-item {
   @include text-s--bold;
   background-color: var(--sbb-color-white-default);
-  border-radius: pxToRem(var(--sbb-border-radius-4x));
-  padding-block-start: pxToRem(var(--sbb-spacing-fixed-2x));
-  padding-block-end: pxToRem(var(--sbb-spacing-fixed-2x));
-  padding-inline-start: pxToRem(var(--sbb-spacing-responsive-xxxs-zero));
-  padding-inline-end: pxToRem(var(--sbb-spacing-responsive-xxxs-zero));
+  border-radius: var(--sbb-border-radius-4x);
+  padding-block-start: var(--sbb-spacing-fixed-2x);
+  padding-block-end: var(--sbb-spacing-fixed-2x);
+  padding-inline-start: var(--sbb-spacing-responsive-xxxs-zero);
+  padding-inline-end: var(--sbb-spacing-responsive-xxxs-zero);
 
   @include mq($from: medium) {
-    padding-inline-start: pxToRem(var(--sbb-spacing-responsive-xxxs-medium));
-    padding-inline-end: pxToRem(var(--sbb-spacing-responsive-xxxs-medium));
+    padding-inline-start: var(--sbb-spacing-responsive-xxxs-medium);
+    padding-inline-end: var(--sbb-spacing-responsive-xxxs-medium);
   }
 }
 
