--- a/src/components/sbb-section/styles/sbb-section.component.scss
+++ b/src/components/sbb-section/styles/sbb-section.component.scss
@@ -8,7 +8,7 @@
   // the design tokens
 
   // Reminder: --_section-gap-horizontal needs a new responsive gap design token
-  // var(--spacing-responsive-s); is just a placeholder for now
+  // var(--sbb-spacing-responsive-s); is just a placeholder for now
   --_section-gap-horizontal: var(--section-gap-horizontal, var(--sbb-spacing-responsive-s));
   --_section-gap-vertical: var(--section-gap-vertical, var(--sbb-spacing-responsive-l));
   --_section-background-color: var(--section-background-color, none);
@@ -73,19 +73,19 @@
 
   display: flex;
   flex-wrap: wrap;
-  column-gap: pxToRem(var(--_section-gap-horizontal));
-  row-gap: pxToRem(var(--_section-gap-vertical));
+  column-gap: var(--_section-gap-horizontal);
+  row-gap: var(--_section-gap-vertical);
 
   ::slotted( [slot] ) {
     flex-basis: 100%;
 
     @include mq($from: small) {
-      flex: 0 0 calc(50% - (#{pxToRem(var(--_section-gap-horizontal))}/2));
-      max-width: calc(50% - (#{pxToRem(var(--_section-gap-horizontal))}/2));
+      flex: 0 0 calc(50% - (var(--_section-gap-horizontal)/2));
+      max-width: calc(50% - (var(--_section-gap-horizontal)/2));
     }
     @include mq($from: wide) {
-      flex: 0 0 calc(25% - ((3*#{pxToRem(var(--_section-gap-horizontal))})/4));
-      max-width: calc(25% - ((3*#{pxToRem(var(--_section-gap-horizontal))})/4));
+      flex: 0 0 calc(25% - ((3*var(--_section-gap-horizontal))/4));
+      max-width: calc(25% - ((3*var(--_section-gap-horizontal))/4));
     }
   }
 }
@@ -98,8 +98,8 @@
 
   display: flex;
   flex-wrap: wrap;
-  column-gap: pxToRem(var(--_section-gap-horizontal));
-  row-gap: pxToRem(var(--_section-gap-vertical));
+  column-gap: var(--_section-gap-horizontal);
+  row-gap: var(--_section-gap-vertical);
 
   ::slotted( [slot] ) {
     flex-basis: 100%;
