--- a/src/components/sbb-card-badge/styles/sbb-card-badge.component.scss
+++ b/src/components/sbb-card-badge/styles/sbb-card-badge.component.scss
@@ -11,8 +11,8 @@
   --card-badge-border-color-primary-negative: var(--sbb-color-aluminium-default);
 
   @include ifForcedColors() {
-    border-inline-start: pxToRem(1) solid CanvasText;
-    border-block-end: pxToRem(1) solid CanvasText;;
+    border-inline-start: #{pxToRemBuild(1)} solid CanvasText;
+    border-block-end: #{pxToRemBuild(1)} solid CanvasText;;
   }
 }
 
@@ -22,12 +22,12 @@
   position: absolute;
   inset-block-start: 0;
   inset-inline-end: 0;
-  padding-inline-start: pxToRem(var(--sbb-spacing-fixed-1x));
-  padding-inline-end: pxToRem(var(--sbb-spacing-fixed-8x));
-  border-end-start-radius: pxToRem(var(--sbb-border-radius-4x));
+  padding-inline-start: var(--sbb-spacing-fixed-1x);
+  padding-inline-end: var(--sbb-spacing-fixed-8x);
+  border-end-start-radius: var(--sbb-border-radius-4x);
 
   // Left to right expression
-  right: pxToRem(var(--sbb-spacing-fixed-3x), true);
+  right: calc(var(--sbb-spacing-fixed-3x) * -1);
   transform: skew(16deg, 0deg);
   > * {
     transform: skew(-16deg, 0deg);
@@ -36,7 +36,7 @@
   // Right to left expression
   &[dir="rtl"] {
     right: initial;
-    left: pxToRem(var(--sbb-spacing-fixed-3x), true);
+    left: calc(var(--sbb-spacing-fixed-3x) * -1);
     transform: skew(-16deg, 0deg);
     > * {
       transform: skew(16deg, 0deg);
