--- a/src/components/sbb-card-product/styles/sbb-card-product.component.scss
+++ b/src/components/sbb-card-product/styles/sbb-card-product.component.scss
@@ -37,7 +37,7 @@
 
 .card-product__icon {
   display: none;
-  padding-inline-end: pxToRem(var(--slot-icon-spacing-inline));
+  padding-inline-end: var(--slot-icon-spacing-inline);
 }
 
 ::slotted( [slot="icon"] ) {
@@ -56,11 +56,11 @@
 }
 
 .card-product__details {
-  padding-block-start: pxToRem(var(--slot-details-spacing-top));
+  padding-block-start: var(--slot-details-spacing-top);
 }
 
 .card-product__action {
-  padding-block-start: pxToRem(var(--slot-action-spacing-top));
+  padding-block-start: var(--slot-action-spacing-top);
   flex-shrink: 0;
 }
 
@@ -102,7 +102,7 @@
   @include mq($from: medium) {
     display: block;
     .card-product__action {
-      padding-block-start: pxToRem(var(--slot-action-spacing-top));
+      padding-block-start: var(--slot-action-spacing-top);
     }
   }
   // And here we switch back again to the 'small' breakpoint layout
