--- a/src/components/sbb-input-error/styles/sbb-input-error.component.scss
+++ b/src/components/sbb-input-error/styles/sbb-input-error.component.scss
@@ -5,10 +5,10 @@
 
 :host {
   display: block;
-  margin-block-start: pxToRem(var(--sbb-spacing-fixed-1x));
+  margin-block-start: var(--sbb-spacing-fixed-1x);
 
   --text-color: var(--sbb-color-red125-default);
-  --icon-size: 14;
+  --icon-size: #{pxToRemBuild(14)};
 
   @include ifForcedColors {
     --text-color: LinkText;
@@ -26,12 +26,12 @@
 }
 
 .input-label-error__icon {
-  line-height: pxToRem(var(--icon-size));
-  margin-inline-end: pxToRem(var(--sbb-spacing-fixed-1x));
+  line-height: var(--icon-size);
+  margin-inline-end: var(--sbb-spacing-fixed-1x);
 }
 
 .input-label-error__icon svg {
-  width: pxToRem(var(--icon-size));
-  height: pxToRem(var(--icon-size));
+  width: var(--icon-size);
+  height: var(--icon-size);
   fill: currentColor;
 }
