--- a/src/components/sbb-text-input/styles/sbb-text-input.component.scss
+++ b/src/components/sbb-text-input/styles/sbb-text-input.component.scss
@@ -20,15 +20,15 @@
   --background-color-disabled: var(--sbb-color-milk-default);
   --text-color-disabled: var(--border-color-disabled);
 
-  --input-height: 48; // TODO Design Token??
-  --input-padding-start: 19;
+  --input-height: #{pxToRemBuild(48)}; // TODO Design Token??
+  --input-padding-start: #{pxToRemBuild(19)};
 
-  --input-with-icon-padding-inline-start: 44; //TODO Design Token?
+  --input-with-icon-padding-inline-start: #{pxToRemBuild(44)}; //TODO Design Token?
 
   --icon-size: var(--sbb-size-icon-ui-small);
 
   @include mq($from: medium) {
-    --input-height: 56; // TODO Design Token??
+    --input-height: #{pxToRemBuild(56)}; // TODO Design Token??
   }
 
   @include ifForcedColors {
@@ -56,14 +56,14 @@
   -webkit-appearance: none;
 
   width: 100%;
-  height: pxToRem(var(--input-height));
-  padding-block-start: pxToRem(var(--input-padding-start));
-  padding-inline-start: pxToRem(var(--sbb-spacing-fixed-3x));
-  padding-inline-end: pxToRem(var(--sbb-spacing-fixed-3x));
+  height: var(--input-height);
+  padding-block-start: var(--input-padding-start);
+  padding-inline-start: var(--sbb-spacing-fixed-3x);
+  padding-inline-end: var(--sbb-spacing-fixed-3x);
 
   background-color: var(--background-color-default);
-  border: pxToRem(1) solid var(--border-color-default);
-  border-radius: pxToRem(var(--sbb-border-radius-4x));
+  border: #{pxToRemBuild(1)} solid var(--border-color-default);
+  border-radius: var(--sbb-border-radius-4x);
 }
 
 .input--no-border {
@@ -71,7 +71,7 @@
   @include shadow-level-5-hard;
 
   @include ifForcedColors() {
-    border: pxToRem(1) solid CanvasText;
+    border: #{pxToRemBuild(1)} solid CanvasText;
   }
 }
 
@@ -82,7 +82,7 @@
 }
 
 .input-wrapper--with-icon .input {
-  padding-inline-start: pxToRem(var(--input-with-icon-padding-inline-start));
+  padding-inline-start: var(--input-with-icon-padding-inline-start);
 }
 
 .input:focus {
@@ -109,14 +109,14 @@
 .input-label {
   @include text-xs--regular();
   position: absolute;
-  inset-block-start: pxToRem(var(--sbb-spacing-fixed-1x));
-  inset-block-end: pxToRem(var(--sbb-spacing-fixed-1x));
+  inset-block-start: var(--sbb-spacing-fixed-1x);
+  inset-block-end: var(--sbb-spacing-fixed-1x);
   inset-inline-start: 0;
 
   display: flex;
   max-width: 100%;
-  padding-inline-start: pxToRem(var(--sbb-spacing-fixed-3x));
-  padding-inline-end: pxToRem(var(--sbb-spacing-fixed-3x));
+  padding-inline-start: var(--sbb-spacing-fixed-3x);
+  padding-inline-end: var(--sbb-spacing-fixed-3x);
   color: var(--text-color-label);
   user-select: none;
   pointer-events: none;
@@ -137,15 +137,15 @@
 }
 
 .input-wrapper--with-icon .input-label {
-  padding-inline-start: pxToRem(var(--input-with-icon-padding-inline-start));
+  padding-inline-start: var(--input-with-icon-padding-inline-start);
 }
 
 // Icon
 // ----------------------------------------------
 .input__icon {
   @include absoluteCenterY;
-  inset-inline-start: pxToRem(var(--sbb-spacing-fixed-3x));
-  height: pxToRem(var(--icon-size));
+  inset-inline-start: var(--sbb-spacing-fixed-3x);
+  height: var(--icon-size);
   overflow: hidden;
   fill: currentColor;
 }
