--- a/src/components/sbb-timetable-park-and-rail/styles/sbb-timetable-park-and-rail.component.scss
+++ b/src/components/sbb-timetable-park-and-rail/styles/sbb-timetable-park-and-rail.component.scss
@@ -1,10 +1,10 @@
 :host {
 
-  --park-and-rail-icon-height: 16;
+  --park-and-rail-icon-height: #{pxToRemBuild(16)};
   --park-and-rail-icon-width: var(--park-and-rail-icon-height);
 
   @include mq($from: medium) {
-    --park-and-rail-icon-height: 24;
+    --park-and-rail-icon-height: #{pxToRemBuild(24)};
     --park-and-rail-icon-width: var(--park-and-rail-icon-height);
   }
 
@@ -12,8 +12,8 @@
 
 .park-and-rail__icon svg {
   float: inline-start;
-  height: pxToRem(var(--park-and-rail-icon-height));
-  width: pxToRem(var(--park-and-rail-icon-width));
+  height: var(--park-and-rail-icon-height);
+  width: var(--park-and-rail-icon-width);
 
   @include ifForcedColors {
     fill: CanvasText;
