--- a/src/components/sbb-timetable-row-day-change/styles/sbb-timetable-row-day-change.component.scss
+++ b/src/components/sbb-timetable-row-day-change/styles/sbb-timetable-row-day-change.component.scss
@@ -1,6 +1,6 @@
 .day-change:not(day-change--visually-hidden) {
-  padding-block-start: pxToRem(var(--sbb-spacing-fixed-2x));
-  padding-block-end: pxToRem(var(--sbb-spacing-fixed-1x))
+  padding-block-start: var(--sbb-spacing-fixed-2x);
+  padding-block-end: var(--sbb-spacing-fixed-1x)
 }
 .day-change__text {
   @include text-xs--regular();
