--- a/src/global/core/shared/variables.scss
+++ b/src/global/core/shared/variables.scss
@@ -46,42 +46,42 @@
   //////////////////////////////////////////////////////////////////////////////
   ///
   /// Responsive spacing
-  --spacing-responsive-xxxs: var(--sbb-spacing-responsive-xxxs-zero);
-  --spacing-responsive-xxs:  var(--sbb-spacing-responsive-xxs-zero);
-  --spacing-responsive-xs:   var(--sbb-spacing-responsive-xs-zero);
-  --spacing-responsive-s:    var(--sbb-spacing-responsive-s-zero);
-  --spacing-responsive-m:    var(--sbb-spacing-responsive-m-zero);
-  --spacing-responsive-l:    var(--sbb-spacing-responsive-l-zero);
-  --spacing-responsive-xl:   var(--sbb-spacing-responsive-xl-zero);
-  --spacing-responsive-xxl:  var(--sbb-spacing-responsive-xxl-zero);
+  --sbb-spacing-responsive-xxxs: var(--sbb-spacing-responsive-xxxs-zero);
+  --sbb-spacing-responsive-xxs:  var(--sbb-spacing-responsive-xxs-zero);
+  --sbb-spacing-responsive-xs:   var(--sbb-spacing-responsive-xs-zero);
+  --sbb-spacing-responsive-s:    var(--sbb-spacing-responsive-s-zero);
+  --sbb-spacing-responsive-m:    var(--sbb-spacing-responsive-m-zero);
+  --sbb-spacing-responsive-l:    var(--sbb-spacing-responsive-l-zero);
+  --sbb-spacing-responsive-xl:   var(--sbb-spacing-responsive-xl-zero);
+  --sbb-spacing-responsive-xxl:  var(--sbb-spacing-responsive-xxl-zero);
 
   @include mq($from: small) {
-    --spacing-responsive-l:    var(--sbb-spacing-responsive-l-small);
-    --spacing-responsive-xl:   var(--sbb-spacing-responsive-xl-small);
-    --spacing-responsive-xxl:  var(--sbb-spacing-responsive-xxl-small);
+    --sbb-spacing-responsive-l:    var(--sbb-spacing-responsive-l-small);
+    --sbb-spacing-responsive-xl:   var(--sbb-spacing-responsive-xl-small);
+    --sbb-spacing-responsive-xxl:  var(--sbb-spacing-responsive-xxl-small);
   }
   @include mq($from: medium) {
-    --spacing-responsive-xxxs: var(--sbb-spacing-responsive-xxxs-medium);
-    --spacing-responsive-xxs:  var(--sbb-spacing-responsive-xxs-medium);
-    --spacing-responsive-xs:   var(--sbb-spacing-responsive-xs-medium);
-    --spacing-responsive-s:    var(--sbb-spacing-responsive-s-medium);
-    --spacing-responsive-m:    var(--sbb-spacing-responsive-m-medium);
-    --spacing-responsive-l:    var(--sbb-spacing-responsive-l-medium);
-    --spacing-responsive-xl:   var(--sbb-spacing-responsive-xl-medium);
-    --spacing-responsive-xxl:  var(--sbb-spacing-responsive-xxl-medium);
+    --sbb-spacing-responsive-xxxs: var(--sbb-spacing-responsive-xxxs-medium);
+    --sbb-spacing-responsive-xxs:  var(--sbb-spacing-responsive-xxs-medium);
+    --sbb-spacing-responsive-xs:   var(--sbb-spacing-responsive-xs-medium);
+    --sbb-spacing-responsive-s:    var(--sbb-spacing-responsive-s-medium);
+    --sbb-spacing-responsive-m:    var(--sbb-spacing-responsive-m-medium);
+    --sbb-spacing-responsive-l:    var(--sbb-spacing-responsive-l-medium);
+    --sbb-spacing-responsive-xl:   var(--sbb-spacing-responsive-xl-medium);
+    --sbb-spacing-responsive-xxl:  var(--sbb-spacing-responsive-xxl-medium);
   }
   @include mq($from: large) {
-    --spacing-responsive-l:    var(--sbb-spacing-responsive-l-large);
-    --spacing-responsive-xl:   var(--sbb-spacing-responsive-xl-large);
-    --spacing-responsive-xxl:  var(--sbb-spacing-responsive-xxl-large);
+    --sbb-spacing-responsive-l:    var(--sbb-spacing-responsive-l-large);
+    --sbb-spacing-responsive-xl:   var(--sbb-spacing-responsive-xl-large);
+    --sbb-spacing-responsive-xxl:  var(--sbb-spacing-responsive-xxl-large);
   }
   @include mq($from: wide) {
-    --spacing-responsive-m:    var(--sbb-spacing-responsive-m-wide);
+    --sbb-spacing-responsive-m:    var(--sbb-spacing-responsive-m-wide);
   }
   @include mq($from: ultra) {
-    --spacing-responsive-l:    var(--sbb-spacing-responsive-l-ultra);
-    --spacing-responsive-xl:   var(--sbb-spacing-responsive-xl-ultra);
-    --spacing-responsive-xxl:  var(--sbb-spacing-responsive-xxl-ultra);
+    --sbb-spacing-responsive-l:    var(--sbb-spacing-responsive-l-ultra);
+    --sbb-spacing-responsive-xl:   var(--sbb-spacing-responsive-xl-ultra);
+    --sbb-spacing-responsive-xxl:  var(--sbb-spacing-responsive-xxl-ultra);
   }
 
   //////////////////////////////////////////////////////////////////////////////
@@ -106,7 +106,7 @@
     --page-base-offset-responsive: var(--sbb-layout-base-offset-responsive-wide);
   }
   @include mq($from: ultra) {
-    --page-base-offset-responsive: 0;
+    --page-base-offset-responsive: 0rem;
   }
 
   //////////////////////////////////////////////////////////////////////////////
@@ -162,10 +162,10 @@
 
   @include mq($from: medium) {
     --size-form-element-m-min-height: var(
-      --size-form-element-m-min-height-medium
+      --sbb-size-form-element-m-min-height-medium
     );
     --size-form-element-l-min-height: var(
-      --size-form-element-l-min-height-medium
+      --sbb-size-form-element-l-min-height-medium
     );
   }
 
